package Pieces;

public enum Couleur {
    NOIRE,BLANC
}
