package Pieces;

public interface IJoueur {
    String obtenirCoup();
}
