package Pieces;

public abstract class Joueur implements IJoueur {
    public abstract String obtenirCoup();
}
