package Pieces;

public class JoueurAI extends Joueur{
    @Override
    public String obtenirCoup() {
        return "";
    }
}
