package bpo2.echecs.jeu;

public interface IFabriqueJoueur {
    IJoueur fabriquerPremierJoueur();
    IJoueur fabriquerSecondJoueur();
}
