package bpo2.echecs.jeu;

public interface IFabriquePiece {
    int getNombrePieces();
    IPiece fabriquerPiece();
}
