package bpo2.echecs.joueurs;

public enum CategorieJoueur {
    HUMAIN, AI
}
