package bpo2.echecs.pieces;

public enum TypePiece {
    ROI, CAVALIER, TOUR
}
